package imports.complex.billing;

public record Order(String id, double amount) {
}

