package imports.simple;

import java.util.ArrayList;
import java.util.List;

public class SimpleImportDemo {
    public static void main(String[] args) {
        List<String> topics = new ArrayList<>();
        topics.add("pakiety");
        topics.add("importy");
        System.out.println(topics);
    }
}

